<resources>
    <string name="app_name">Calculator</string>
    <string name="correction_button"><![CDATA[<<]]></string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtrackt">-</string>
    <string name="addition">+</string>
    <string name="init_display_text">Lets calculate!!</string>
    <string name="button_text_1">1</string>
    <string name="button_text_2">2</string>
    <string name="button_text_3">3</string>
    <string name="button_text_4">4</string>
    <string name="button_text_5">5</string>
    <string name="button_text_6">6</string>
    <string name="button_text_7">7</string>
    <string name="button_text_8">8</string>
    <string name="button_text_9">9</string>
    <string name="button_text_point">.</string>
    <string name="button_text_equals">=</string>
    <string name="button_text_0">0</string>
</resources>
