<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.labs.musaka.calculator.MainActivity"
    android:background="#000"
    android:weightSum="10"

    >

    <EditText
        android:id="@+id/calc_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_display_text"

        android:textAlignment="textEnd"
        android:textSize="26sp"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:padding="5dp"
        android:gravity="end"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:textIsSelectable="true"

        android:background="@drawable/backgound_display"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:paddingBottom="5dp"
        >
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4"
            android:layout_alignParentBottom="true"
            android:id="@+id/numberPad"
            android:layout_alignWithParentIfMissing="true"
            >


            <Button android:tooltipText="@string/button_text_1" android:id="@+id/button_1" android:onClick="calkMe" android:height="100dp" android:text="@string/button_text_1"/>
            <Button android:id="@+id/button_2" android:onClick="calkMe" android:height="100dp"  android:text="@string/button_text_2"/>
            <Button android:id="@+id/button_3" android:onClick="calkMe" android:height="100dp"  android:text="@string/button_text_3"/>

            <Button android:id="@+id/button_4" android:onClick="calkMe" android:height="100dp"  android:text="@string/button_text_4"/>
            <Button android:id="@+id/button_5" android:onClick="calkMe" android:height="100dp"  android:text="@string/button_text_5"/>
            <Button android:id="@+id/button_6" android:onClick="calkMe" android:height="100dp"  android:text="@string/button_text_6"/>

            <Button android:id="@+id/button_7" android:onClick="calkMe"  android:height="100dp" android:text="@string/button_text_7"/>
            <Button android:id="@+id/button_8" android:onClick="calkMe"  android:height="100dp" android:text="@string/button_text_8"/>
            <Button android:id="@+id/button_9" android:onClick="calkMe"  android:height="100dp" android:text="@string/button_text_9"/>

            <Button android:backgroundTint="#2b3893" android:id="@+id/button_point" android:onClick="calkMe" android:height="100dp" android:text="@string/button_text_point"/>
            <Button android:id="@+id/button_0" android:onClick="calkMe" android:height="100dp" android:text="@string/button_text_0"/>
            <Button android:backgroundTint="#2b3893" android:id="@+id/button_equals" android:onClick="calcResult" android:height="100dp" android:text="@string/button_text_equals"/>




        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="5"
            android:layout_alignParentBottom="true"
            android:id="@+id/functionsPad"
            android:layout_toEndOf="@id/numberPad"

            android:layout_toRightOf="@id/numberPad">


            <Button android:backgroundTint="#2b3893" android:id="@+id/button_delete"  android:onClick="makeCorrection" android:height="80dp" android:text="@string/correction_button" android:layout_gravity="end"/>
            <Button android:backgroundTint="@color/colorPrimary" android:id="@+id/button_add"  android:onClick="calkMe" android:height="80dp" android:text="@string/addition" android:layout_gravity="end"/>
            <Button android:backgroundTint="@color/colorPrimary" android:id="@+id/button_subtrackt" android:onClick="calkMe" android:height="80dp" android:text="@string/subtrackt"  android:layout_gravity="end"/>
            <Button android:backgroundTint="@color/colorPrimary" android:id="@+id/button_multiply" android:onClick="calkMe" android:height="80dp" android:text="@string/multiply" android:layout_gravity="end"/>
            <Button android:backgroundTint="@color/colorPrimary" android:id="@+id/button_divide" android:onClick="calkMe" android:height="80dp" android:text="@string/divide" android:layout_gravity="end"/>



        </GridLayout>
    </RelativeLayout>

</LinearLayout>
